# docs/api_contracts/openapi.yaml
@@ -4366,7 +4366,9 @@ components:
           title: Uptime Human
           description: 'Tempo de uptime legível (ex: 142 dias, 8 horas, 12 min)'
         firmware_version:
-          type: string
+          anyOf:
+          - type: string
+          - type: 'null'
           title: Firmware Version
           description: Versão do software/firmware em execução
         cpu_usage_pct:
@@ -4461,7 +4463,6 @@ components:
       - host
       - uptime_seconds
       - uptime_human
-      - firmware_version
       title: OLTXRayResponse
     ONUActionResponse:
       properties:
